@@ -1,3 +1,14 @@
+2007-10-23  Jan Michael Alonzo  <jmalonzo@unpluggable.com>
+
+        Reviewed by Alp.
+
+        http://bugs.webkit.org/show_bug.cgi?id=15656
+        [GTK] Implement WebCore::Widget::isEnabled/setEnabled
+
+        * platform/gtk/WidgetGtk.cpp:
+        (WebCore::Widget::isEnabled):
+        (WebCore::Widget::setEnabled): Implemented.
+
 2007-10-25  David Hyatt  <hyatt@apple.com>
 
         Fix for bug 15672, background images don't tile properly inside transforms.  This patch fixes background
